github_data_collector/src/data/issue_comment/SeasX_SeasLog.txt
fix ulong conflicting
```
./include/php7_wrapper.h:23:20: error: conflicting types for 'ulong'
 typedef zend_ulong ulong;
                    ^~~~~

```
系统:window10 1903
php: PHP Version 7.3.10
代码:
`<?php
file_put_contents("D://logs/default/a.log", "今天我站在年轻的战场" . PHP_EOL, FILE_APPEND);

        \SeasLog::setBasePath('D://logs');

        \SeasLog::info('test');

        \SeasLog::flushBuffer();

        var_dump(\SeasLog::getBuffer());
?>`
代码执行后
D://logs/default/a.log  文件有生成成功,文件中内容正确
但seaslog的日志末生成,D://logs/default/20191113.log此文件末生成
 var_dump(\SeasLog::getBuffer()) 输出内容是
array(1) {
  ["D://logs/default/20191113.log"]=>
  array(1) {
    [0]=>
    string(74) "2019-11-13 12:10:31 | INFO | 88056 | 5dcb8236e9596 | 1573618231.81 | test
"
  }
}




Yii2日志模块使用SeasLog
https://github.com/wxxiong6/yii-seaslog

Personally, I suggest that seaslog can save log to both file and remote tcp/udp server at the same time.
swoole4.4 php7.2 SeasLog2.x
不记录 %F 则正常
SeasLog通过UDP/TCP传递日志信息时在目标机器中拿到当前机器的BasePath
并发请求下，日志出现被截断的情况，请问是配置问题吗？
请问能否同时支持按日期和按文件大小分割，比如2018-11-10.log01，2018-11-10.log02，2018-11-10.log03，2018-11-11.log01，2018-11-11.log02，2018-11-11.log03这样？
能不能留个接口把错误信息上传到其他的平台去。